base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-svc
spec:
  selector:
    app: sample-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
